# obkreator

./: .gitignore  README.md  classifiers.txt  packageme.sh  pyproject.toml  requirements.txt
OB/FEROS-2.2/: HD10.obd  HD10.obx  HD20.obd  HD20.obx  HD30.obd  HD30.obx
